--- a/example/nodejs/express/views/error.pug
+++ b/example/nodejs/express/views/error.pug
@@ -1,7 +1,7 @@
-include header.pug
+extend layout.pug
 
-h1= error.message
-h2= error.status
-pre #{error.stack}
-
-include footer.pug
+block main
+    main
+        h1= error.message
+        h2= error.status
+        pre #{error.stack}
